--- a/stories/cfaqs.ko.org
+++ b/stories/cfaqs.ko.org
@@ -100,7 +100,8 @@ Programming FAQs에 대한 한글(한국어) 판을 제공합니다.
   - [[http://www.lysator.liu.se/c/][Programming in C]]
   - [[http://CAReferenceManual.com/][C: A Reference Manual]]
   - [[http://david.tribble.com/text/cdiffs.htm][Incompatibilities Between ISO C and ISO C++]] - 제가 번역한 문서는
-    [[iso-c-diff-iso-c++/index.html][여기]]에서 보실 수 있습니다.
+    [[/iso-c-diff-iso-c++/index.html][여기]]에서 보실 수 있습니다.
+  - [[/ko/posts/undefined-behavior/][What Every C Programmer Should Know About Undefined behavior]] 
 
 다음 목록도 유용하지만, 꼭 C 언어 표준에 관한 것을 다루는 곳은
 아닙니다.
