--- a/stories/cfaqs.org
+++ b/stories/cfaqs.org
@@ -104,7 +104,8 @@ standard related document or books.
   - [[http://www.open-std.org/jtc1/sc22/wg14/][JTC1/SC22/WG14 - C]]  You can get the /Rationale for International Standard -- Programming Languages -- C/ here.
   - [[http://www.lysator.liu.se/c/][Programming in C]]
   - [[http://CAReferenceManual.com/][C: A Reference Manual]]
-  - [[http://david.tribble.com/text/cdiffs.htm][Incompatibilities Between ISO C and ISO C++]] - I translate this document in Korean [[iso-c-diff-iso-c++/index.html][here]].
+  - [[http://david.tribble.com/text/cdiffs.htm][Incompatibilities Between ISO C and ISO C++]] - I translate this document in Korean [[/iso-c-diff-iso-c++/index.html][here]].
+  - [[/posts/undefined-behavior/][What Every C Programmer Should Know About Undefined behavior]] by Chris Lattner
 
   More links for additional information. Note that these information 
   may be not directly related to the Standard C.
