--- a/posts/2018-05-28-undefined-behavior.ko.org
+++ b/posts/2018-05-28-undefined-behavior.ko.org
@@ -11,7 +11,15 @@
 
 # -*- fill-column: 80 -*-
 
-* 
+* Preamble
+
+[[http://nondot.org/sabre/][Chris Lattner]]씨의 허락을 받아 LLVM blog에 게시된 아래 세 글을 (정말 대충) 번역했습니다.
+
+- [[http://blog.llvm.org/2011/05/what-every-c-programmer-should-know.html][What Every C Programmer Should Know About Undefined behavior #1/3]]
+- [[http://blog.llvm.org/2011/05/what-every-c-programmer-should-know_14.html][What Every C Programmer Should Know About Undefined behavior #2/3]]
+- [[http://blog.llvm.org/2011/05/what-every-c-programmer-should-know_21.html][What Every C Programmer Should Know About Undefined behavior #3/3]]
+
+
 * What Every C Programmer Should Know About Undefined behavior #1/3
 
 LLVM으로 컴파일된 코드는 가끔 =SIGTRAP= signal을 일으킬 때가 있습니다.  그
